# workforce-intelligence-platform-dashboard

./: Makefile  README.md  TASKS.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: dashboard-ci.yml
.streamlit/: config.toml
airflow/dags/: dashboard_refresh_dag.py
docker/: init_dashboard_schema.sql
src/: __init__.py
src/components/: cache.py  charts.py  filters.py
src/pages/: attrition.py  headcount.py  recruiting.py
src/queries/: __init__.py  attrition_queries.py  headcount_queries.py  recruiting_queries.py
src/utils/: alerts.py  db.py
tests/: conftest.py  test_cache.py  test_filters.py  test_infra.py  test_queries.py
