[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[project]
name = "wip-dashboard"
version = "0.1.0"
description = "People Analytics Streamlit dashboard — workforce-intelligence-platform module 4"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "trino>=0.328",
    "pandas>=2.2",
    "plotly>=5.20",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "apache-airflow>=2.9.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    # Streamlit/Plotly presentation glue — exercised via a running app, not unit tests.
    "src/pages/*",
    "src/components/charts.py",
]
